# latexexpr_efficalc

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: .buildinfo  all.html  classes.html  genindex.html  index.html  objects.inv  other_members.html  predefined_operations.html  predefined_variables.html  py-modindex.html  search.html  searchindex.js  sympy.html
docs/.doctrees/: all.doctree  classes.doctree  environment.pickle  index.doctree  other_members.doctree  predefined_operations.doctree  predefined_variables.doctree  sympy.doctree
docs/_sources/: all.rst.txt  predefined_operations.rst.txt  predefined_variables.rst.txt
docs_src/: classes.rst  conf.py  index.rst  other_members.rst  predefined_variables.rst  sympy.rst
examples/example1/: example1.py
examples/example3/: example3.import.py  example3.tex
examples/example4/: example4.py
latexexpr/: __init__.py
latexexpr/sympy/: __init__.py
latexexpr_efficalc/: __init__.py
latexexpr_efficalc/sympy/: __init__.py
tests/: test_latexexpr.py  test_operation_math.py  test_variable.py  test_variable_math.py
